--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -12,16 +12,19 @@
                                 <a href="{% url 'planningandacquiring:add_breed_form'%}" class="item">Add Breed
                                         <i class="plus circle icon"></i>
                                 </a>
-                                <a href="{% url 'planningandacquiring:add_K9_parents_form'%}" class="item">Breeding Form
+                                <a href="{% url 'planningandacquiring:add_K9_parents_form'%}" class="item">Breed K9
                                         <i class="plus circle icon"></i>
+                                </a>
+                                <a href="{% url 'planningandacquiring:breeding_list'%}" class="item">Breeding List
+                                        <i class="venus mars icon"></i>
                                 </a>
                                 <a href="{% url 'planningandacquiring:K9_list'%}" class="item">K9 List View
                                         <i class="list alternate icon"></i>
                                 </a>
 
-                                <a href="{% url 'planningandacquiring:breeding_recommendation'%}" class="item">Breeding Recommendation
+                                <!-- <a href="{% url 'planningandacquiring:breeding_recommendation'%}" class="item">Breeding Recommendation
                                         <i class="venus mars icon"></i>
-                                </a>
+                                </a> -->
 
                                 <a href="{% url 'planningandacquiring:budgeting'%}" class="item">Budgeting
                                         <i class="money bill alternate outline icon"></i>
