--- a/unitmanagement/templates/unitmanagement/choose_handler_list.html
+++ b/unitmanagement/templates/unitmanagement/choose_handler_list.html
@@ -14,7 +14,7 @@
     <center>
             <img src="{{k9.image.url}}" alt="" width="280"> 
     </center>
-   <table class="ui six column celled table">
+   <table class="ui six column teal celled table">
        <thead>
             <tr>
                 <th>Name</th>
