--- a/unitmanagement/templates/unitmanagement/vaccination_form.html
+++ b/unitmanagement/templates/unitmanagement/vaccination_form.html
@@ -2,41 +2,8 @@
 
 {% block content %}
 <div class="ui basic segment" style="margin-bottom:0px;">
-    <h2 class="ui header">
-        {{title}}
-        <div class="sub header">Input data of Vaccination Here</div>
-    </h2>
-    {% if messages %}
-        {% for message in messages %}
-            <div class="{{style}}" > {{ message }}</div>
-        {% endfor %}
-    {% endif %}
-</div>
-<div class="ui inverted segment">
-    <form class="ui inverted form" method="POST">
-        {% csrf_token %}
-        <div class="three fields">
-            <div class="field">
-                <label>Dog Name : Serial Number</label>
-                {{form.dog}}
-            </div>
-            <div class="field"></div>
-            <div class="field"></div>
-        </div>
-        <div class="two fields">
-            <div class="field">
-                <label>Disease</label>
-                {{form.disease}}
-            </div>
-            <div class="field">
-                <label>Vaccine</label>
-                {{form.vaccine}}
-            </div>
-        </div>
-        <div class="ui inverted right aligned segment" style="padding: 0px;">
-            <button onclick="return confirm('Are you sure?')" class = "ui button green" type="submit" >{{ actiontype }}</button>
-        </div>
-    </form>
+   <h1>Vaccine</h1>
+   
 </div>
 <script type="text/javascript">
 
