--- a/planningandacquiring/templates/planningandacquiring/add_K9_offspring.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9_offspring.html
@@ -1,35 +1,33 @@
 {% extends "profiles/sidebar_pa.html" %} {% block content %}
 <h2 class="ui header">
- {{Title}}
-  <div class="sub header">Input K9 breeding data here</div>
+  K9's Born
+  <div class="sub header">Input breeded K9 data here</div>
 </h2>
+<div class="ui horizontal segments">
+    <div class="ui segment">
+        <center>
+            <img src="{{data.mother.image.url}}" alt="" width="200">
+          </center>
+    </div>
 
-<div class="ui ordered steps">
-  <div class="completed step">
-    <div class="content">
-      <div class="title">K9 Parents Form</div>
-      <div class="description">Select K9 Parents</div>
+    <div class="ui segment">
+        <center>
+            <img src="{{data.father.image.url}}" alt="" width="200">
+          </center>
     </div>
-  </div>
-  <div class="completed step">
-    <div class="content">
-      <div class="title">Confirm Parents</div>
-      <div class="description">Verify selected parents</div>
-    </div>
-  </div>
-  <div class="active step">
-    <div class="content">
-      <div class="title">Offspring Form</div>
-      <div class="description">Provide K9 offspring data</div>
-    </div>
-  </div>
-  <div class="disabled step">
-    <div class="content">
-      <div class="title">Confirm Breeding</div>
-      <div class="description">Verify breeding details</div>
-    </div>
-  </div>
+
 </div>
+<table class="ui celled table">
+    <thead>
+      <tr>
+        <th class="center aligned three wide">Mother</th>
+        <td>{{data.mother}}</td>
+        
+        <th class="center aligned three wide">Father</th>
+        <td>{{data.father}}</td>
+      </tr>
+    </thead>
+</table>
  {% if messages %}
         {% for message in messages %}
             <div class="{{ style }} row"> {{ message }}</div>
